Fix reckless font on mobile
Ensure the Reckless font is applied correctly on mobile view by adjusting font family settings.

--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
-@font-face {
-  font-family: 'Reckless';
-  src: url('/Reckless-Regular.woff2') format('woff2'),
-       url('/Reckless-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Reckless';
-  src: url('/Reckless-Medium.woff2') format('woff2'),
-       url('/Reckless-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Reckless';
-  src: url('/Reckless-Bold.woff2') format('woff2'),
-       url('/Reckless-Bold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
